[project]
name = "thresholdspintests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "mplhep>=1.3.1",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pylhe>=1.0.4",
    "tqdm>=4.68.3",
    "uproot>=5.7.4",
]
